@@ -1,5 +1,5 @@
 {
-  "count": 31,
+  "count": 32,
   "uniques": 8,
   "clones": [
     {
@@ -49,6 +49,11 @@
     },
     {
       "timestamp": "2022-11-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-22T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
