@@ -1,3 +1,11 @@
+2022-11-22T08:20:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3521577919 # 1051
+* notice: last 14d: unq all: 8 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 380 670 / 396 701
+* notice: next accum: outdated-unq outdated-all / unq all: 380 670 / 397 702
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-22]
+
 2022-11-22T01:20:05Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3519512464 # 1050
 * notice: last 14d: unq all: 8 31
